--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -5,28 +5,29 @@
     android:background="@color/primary"
     android:orientation="vertical">
 
-    <LinearLayout
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:gravity="center"
+    android:orientation="vertical">
+
+    <ImageView
+        android:layout_width="450dp"
+        android:layout_height="250dp"  
+        android:src="@drawable/app_logo"
+        android:scaleType="fitCenter" />
+
+   <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:src="@drawable/app_logo"
-            android:scaleType="fitCenter" />
-
-       <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="Say it Back"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif" />
+        android:text="SAY IT BACK"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="4dp"/>  <!-- Small fixed margin -->
     </LinearLayout>
 
     <TextView
